--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "\"Authentication microservice\"",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,5 +24,14 @@
   "bugs": {
     "url": "https://github.com/Promethian3/auth/issues"
   },
-  "homepage": "https://github.com/Promethian3/auth#readme"
+  "homepage": "https://github.com/Promethian3/auth#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.10"
+  },
+  "dependencies": {
+    "@hapi/joi": "^17.1.1",
+    "bcrypt": "^5.0.1",
+    "dotenv": "^10.0.0",
+    "mongoose": "^5.13.2"
+  }
 }
